<resources>
    <string name="app_name">Lịch vạn niên</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="folk_1">Chỉ biết véo người, hễ người véo trả rụng rời tay chân.</string>
    <string name="hour">Giờ %1$s</string>
    <string name="detail">Chi tiết</string>

    <string name="sunday">CN</string>
    <string name="mon">Hai</string>
    <string name="tus">Ba</string>
    <string name="wes">Tư</string>
    <string name="thurs">Năm</string>
    <string name="six">Sáu</string>
    <string name="sat">Bảy</string>

    <!--Can Chi-->
    <string name="day_can_chi">Ngày %1$s %2$s</string>
    <string name="month_can_chi">Tháng %1$s %2$s</string>
    <string name="year_can_chi">Năm %1$s %2$s</string>

    <string-array name="month">
        <item>Tháng 1</item>
        <item>Tháng 2</item>
        <item>Tháng 3</item>
        <item>Tháng 4</item>
        <item>Tháng 5</item>
        <item>Tháng 6</item>
        <item>Tháng 7</item>
        <item>Tháng 8</item>
        <item>Tháng 9</item>
        <item>Tháng 10</item>
        <item>Tháng 11</item>
        <item>Tháng 12</item>
    </string-array>

    <string name="day">Thứ</string>
    <string name="date">Ngày</string>
    <string name="month">Tháng</string>
    <string name="year">Năm</string>
    <string name="hour_chi_can">Giờ %1$d</string>

    <!-- Navigation -->
    <string name="nav_12_cung">12 cung hoàng đạo</string>
    <string name="nav_setting">Cài Đặt</string>
    <string name="nav_flower_hand">Xem hoa tay</string>
    <string name="nav_married">Xem cưới gả</string>
    <string name="nav_share">Chia sẻ</string>
    <string name="nav_calendar">Lịch</string>
    <string name="colection">Sưu tầm</string>
    <string name="nav_about">Thông tin</string>
    <string name="introduce">Giới thiệu</string>

    //
    <string name="title_calendar">Dương Lịch</string>
    <string name="title_luna">Âm Lịch</string>
    <string name="title_start">Xuất hành</string>

    <string-array name="days_sunday_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string name="t2">Hai</string>
    <string name="t3">Ba</string>
    <string name="t4">Tư</string>
    <string name="t5">Năm</string>
    <string name="t6">Sáu</string>
    <string name="t7">Bảy</string>
    <string name="cn">CN</string>

    <string name="facebook_app_id">691167354619085</string>
    <string name="fb_login_protocol_scheme">24ac00c5770d489b92fb1a2670a81e73</string>

    <string name="banner_ad_unit_id">ca-app-pub-3524852624424593~7960613554</string>

    <string name="hour_gold">Ngày hoàng đạo</string>
    <string name="hour_black">Ngày hắc đạo</string>
    <string name="hour_gold_dot">Giờ hoàng đạo :</string>
    <string name="version">version</string>
    <string name="beta">Beta</string>

    <!-- About -->

    <string name="email">haiminhtran810@gmail.com</string>
    <string name="thanks">Mọi thông tin các bạn có thể liên hệ \nhai.mobileprogramer@gmail.com</string>

    <string name="title_develop">2. Ứng dụng được phát triển bởi cá nhân</string>
    <string name="title_function">1. Chức năng hiện có của ứng dụng</string>
    <string name="title_version">3. Phiên bản</string>

    <string name="content_function">Các bạn có thể xem các thông tin như là giờ hoàng đạo, ngày hoàng đạo, thông tin giờ
        hiện tại của hệ thống, xem ngày tháng trong tương lai,không chạy ngầm trong ứng dụng. \n\nNguyên nhân đây chỉ là
        bản Beta lên mình sẽ cung cấp cho bạn những dịch vụ hữu ích hơn trong tương lai
    </string>
</resources>
