<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/menu_12_cung"
                android:icon="@drawable/ic_yy"
                android:title="@string/nav_12_cung"
        />
        <item
                android:id="@+id/menu_flower_hand"
                android:icon="@drawable/ic_yy"
                android:title="@string/nav_married"
        />
        <item
                android:id="@+id/menu_share"
                android:icon="@drawable/ic_yy"
                android:title="@string/nav_share"
        />

        <item
                android:id="@+id/menu_calendar"
                android:icon="@drawable/ic_yy"
                android:title="@string/nav_calendar"
        />
        <item
                android:id="@+id/menu_setting"
                android:icon="@drawable/ic_yy"
                android:title="@string/nav_setting"
        />
    </group>
</menu>