<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:clickable="false"
        android:layout_height="match_parent">
    <include
            android:id="@+id/layout_header"
            layout="@layout/layout_header"/>
    <View
            android:background="@color/black_overlay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_26"
                    android:padding="@dimen/dp_5"
                    android:text="@string/app_name"
                    android:textColor="@color/blu_main"
                    android:id="@+id/tv_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_18"
                    android:padding="@dimen/dp_5"
                    android:text="@string/title_function"
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textSize="@dimen/sp_16"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:text="@string/content_function"
                    android:textColor="@color/black_overlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_18"
                    android:padding="@dimen/dp_5"
                    android:text="@string/title_develop"
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="@dimen/sp_16"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:text="@string/thanks"
                    android:textColor="@color/black_overlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_18"
                    android:padding="@dimen/dp_5"
                    android:text="@string/title_version"
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/tv_version"
                    android:textSize="@dimen/sp_16"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:textColor="@color/black_overlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Beta 1.0"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
