<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background="@android:color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <View style="@style/HorizontalLine"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_10"
                android:textColor="@color/black_overlay"
                android:text="@string/title_calendar"
                android:background="@drawable/bg_calendar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
    </LinearLayout>
    <TextView
            tools:text="Thứ 4 - Ngày 3 - Tháng 4 - Năm 2019"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:textColor="@color/black_overlay"
            android:id="@+id/tv_Calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <View style="@style/HorizontalLine"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_10"
                android:textColor="@color/black_overlay"
                android:text="@string/title_luna"
                android:background="@drawable/bg_calendar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textAlignment="center"
                android:text="@string/date"
                android:layout_weight="1"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:textColor="@color/black_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:textAlignment="center"
                android:text="@string/month"
                android:layout_weight="1"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:textColor="@color/black_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:textAlignment="center"
                android:text="@string/year"
                android:layout_weight="1"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:textColor="@color/black_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                tools:text="Canh Ngọ"
                android:textStyle="bold"
                android:textSize="@dimen/sp_14"
                android:text="@string/year"
                android:layout_weight="1"
                android:textAlignment="center"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/tv_Luna_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                tools:text="Đinh Mão"
                android:textStyle="bold"
                android:textSize="@dimen/sp_14"
                android:text="@string/year"
                android:layout_weight="1"
                android:textAlignment="center"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/tv_Luna_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                tools:text="Kỷ Hợi"
                android:textStyle="bold"
                android:textSize="@dimen/sp_14"
                android:text="@string/year"
                android:layout_weight="1"
                android:textAlignment="center"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/tv_Luna_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <View style="@style/HorizontalLine"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/title_start"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_10"
                android:textColor="@color/black_overlay"
                android:background="@drawable/bg_calendar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"/>
</LinearLayout>
